--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/data_store
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_template
 spring.datasource.username=mysql
 spring.datasource.password=mysql
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
+
+flyway.locations=classpath:/db
