--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
+        classpath("org.flywaydb:flyway-gradle-plugin:4.0.3")
     }
 }
 
@@ -11,6 +12,20 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.flywaydb.flyway'
+
+def currentEnv = System.getenv()
+
+flyway {
+    driver = 'com.mysql.jdbc.Driver'
+    url = String.format(
+            "jdbc:mysql://%s:%s/%s?user=%s&password=%s&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull",
+            currentEnv.getOrDefault("DB_HOST", "localhost"),
+            currentEnv.getOrDefault("DB_PORT", 3306),
+            currentEnv.getOrDefault("DB_ON_CREATE_DB", "spring_template"),
+            currentEnv.getOrDefault("DB_MYSQL_USER", "mysql"),
+            currentEnv.getOrDefault("DB_MYSQL_PASS", "mysql"))
+}
 
 bootJar {
     baseName = 'gs-spring-boot'
@@ -28,6 +43,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile 'mysql:mysql-connector-java'
+    compile 'org.flywaydb:flyway-core'
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit")
 }
