--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile 'mysql:mysql-connector-java'
     compile 'org.flywaydb:flyway-core'
+    testCompile 'io.rest-assured:spring-mock-mvc'
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("junit:junit")
 }
