--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ flyway {
 }
 
 bootJar {
-    baseName = 'gs-spring-boot'
+    baseName = 'spring-boot-template'
     version =  '0.1.0'
 }
 
@@ -42,8 +42,9 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile 'mysql:mysql-connector-java'
-    compile 'org.flywaydb:flyway-core'
+//    compile 'org.flywaydb:flyway-core'
     testCompile 'io.rest-assured:spring-mock-mvc'
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
