--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
         classpath("org.flywaydb:flyway-gradle-plugin:4.0.3")
-        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+//        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
     }
 }
 
@@ -15,11 +15,11 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.flywaydb.flyway'
 
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.SR1'
-    }
-}
+//dependencyManagement {
+//    imports {
+//        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.SR1'
+//    }
+//}
 
 def currentEnv = System.getenv()
 
@@ -51,7 +51,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile 'mysql:mysql-connector-java'
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+//    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
 
 //    compile 'org.flywaydb:flyway-core'
     testCompile 'io.rest-assured:spring-mock-mvc'
