--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,12 @@
 #config for server
 server.port=8081
 
+#config for log
+logging.file=demo.log
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=INFO
+
 #config for db
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_template
