add eureka client

--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.flywaydb.flyway'
 
-//dependencyManagement {
-//    imports {
-//        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.SR1'
-//    }
-//}
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.M9'
+    }
+}
 
 def currentEnv = System.getenv()
 
@@ -41,6 +41,9 @@ bootJar {
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
 }
 
 sourceCompatibility = 1.8
@@ -52,7 +55,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-jersey")
     compile 'mysql:mysql-connector-java'
-//    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-config'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 //    compile 'org.flywaydb:flyway-core'
     testCompile 'io.rest-assured:spring-mock-mvc'
