--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,3 +21,7 @@ spring.datasource.password=mysql
 #spring.jpa.show-sql = true
 #
 #flyway.locations=classpath:/db
+
+#config for eureka
+spring.application.name=template-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
