--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,6 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_ON_CREATE_DB}
 spring.datasource.username=${DB_MYSQL_USER}
 spring.datasource.password=${DB_MYSQL_PASS}
+
+spring.application.name=template-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
